Continue fixing padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,8 @@ h1 {
 
 h2 {
   font-size: 1.999em;
-  margin-top: 1.414em;
-  margin-bottom: 1.414em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 h3 {
@@ -98,6 +98,11 @@ h3 {
 
   h1 {
   font-size: 2.827em;
+  }
+
+  h2 {
+    margin-top: 1.414em;
+    margin-bottom: 1.414em;
   }
 }
 
@@ -126,10 +131,17 @@ a:hover {
 \*------------------------------------*/
 
 .section-break {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 6vw;
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-break {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 6vw;
+  }
 }
 
 .section-title {
@@ -284,6 +296,7 @@ a:hover {
   border: 0;
   font-size: 1.414em;
   padding: 8px 16px;
+  margin: 20px 0;
   transition: all 0.5s ease-in;
 }
 
@@ -590,13 +603,19 @@ footer p {
   position: relative;
   background: #9d9d9d;
   background: url(../img/homepage-header-estimate-mob.jpg) center center/cover;
-  padding: 180px 0 40px;
+  padding: 120px 0 0;
 }
 
 @media only screen and (min-width: 768px) {
   .homepage-header {
     background: url(../img/homepage-header-estimate.jpg) left bottom/cover;
-    padding-bottom: 180px;
+    padding: 120px 0;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .homepage-header {
+    padding: 180px 0;
   }
 }
 
@@ -623,7 +642,6 @@ footer p {
 }
 
 .about-img {
-  flex: 1 0 100%;
   margin: 1em 0;
 }
 
@@ -634,14 +652,11 @@ footer p {
 }
 
 .about-us-text {
-  flex: 1 0 100%;
   margin: 0 0 40px 0;
 }
 
 @media only screen and (min-width: 992px) {
   .about-img {
-    flex: 0 0 48%;
-    width: 48%;
     position: relative;
     margin: 0;
     height: auto;
@@ -656,8 +671,6 @@ footer p {
   }
   
   .about-us-text {
-    flex: 0 0 48%;
-    width: 48%;
     margin: 0 0 85px 20px;
   } 
 }
@@ -785,6 +798,7 @@ footer p {
 .services-button {
   width: 70%;
   font-size: .9em;
+  margin: 0;
   opacity: 0;
   height: 0;
   padding: 0;
@@ -804,8 +818,15 @@ footer p {
 }
 
 .certifications-icon {
-  height: 75px;
+  height: 60px;
+  max-width: 100%;
   padding: 5px 0;
+}
+
+@media-only screen and (min-width: 768px) {
+  .certifications-icon {
+    height: 75px;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
@@ -901,6 +922,12 @@ height: 100% !important;
   margin-bottom: 20px;
 }
 
+@media only screen and (min-width: 768px) {
+  .locations-button {
+    margin-top: auto;
+  }
+}
+
 /* HOMEPAGE: REVIEWS */
 
 .reviews {
@@ -937,6 +964,16 @@ height: 100% !important;
   padding: 1em;
 }
 
+.reviews-item:last-of-type {
+  margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .reviews-item:last-of-type {
+    margin-bottom: 40px;
+  }
+}
+
 .reviews-item p {
   font-size: 0.9em;
 }
@@ -963,10 +1000,17 @@ height: 100% !important;
 }
 
 .estimate-break {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 6vw;
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .estimate-break {
+    display: block;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 6vw;
+  }
 }
 
 .estimate-title {
@@ -993,6 +1037,13 @@ height: 100% !important;
 
 .estimate-item {
   z-index: 2;
+  padding-bottom: 40px;
+}
+
+@media only screen and (min-width: 768px) {
+  .estimate-item {
+    padding-bottom: 0;
+  }
 }
 
 /* ABOUT US */
